--- a/app/src/main/res/menu/menutoolbar.xml
+++ b/app/src/main/res/menu/menutoolbar.xml
@@ -8,4 +8,16 @@
         android:title="Search "
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/action_voice"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_voice"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_addcart"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_local_grocerymainmenu"
+        app:showAsAction="always" />
 </menu>
