--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -13,39 +13,50 @@
             android:id="@+id/logoID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo"
+            android:src="@mipmap/ic_launcher"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="60dp" />
 
+<LinearLayout
+    android:layout_marginTop="40dp"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UP TO 70% OFF"
+            android:text="UP TO 69% OFF"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#07A50D"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="180dp"/>
+
 
         <TextView
             android:id="@+id/text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gracery  Staples"
+            android:text="Grocery and Staples"
             android:textSize="20dp"
-            android:textColor="#000"
             android:textStyle="bold"
-            android:layout_marginTop="90dp"
+            android:textColor="#07A50D"
             android:layout_marginLeft="180dp"/>
+
+
         <TextView
             android:id="@+id/text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pulses,Atta OtherFlours,Rice and Other Grocery"
-            android:textSize="10dp"
-            android:textColor="#9CA79D"
-            android:layout_marginTop="130dp"
+            android:text="pulse,Atta other Flours"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#07A50D"
             android:layout_marginLeft="180dp"/>
+
+
+</LinearLayout>
     </android.support.v7.widget.CardView>
+
 </LinearLayout>
