--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -104,6 +104,7 @@
 
 
 <android.support.v7.widget.CardView
+    android:id="@+id/cardview"
     android:layout_width="150dp"
     android:elevation="10sp"
     android:background="@drawable/shadow"
@@ -167,7 +168,7 @@
             android:text="ADD"
             android:textColor="@color/white"
             android:drawableRight="@drawable/ic_add"
-            android:background="@drawable/roundedbutton"
+            android:background="@color/text_color"
             android:layout_width="130dp"
             android:layout_marginLeft="10dp"
             android:layout_height="30dp"
