--- a/app/src/main/res/layout/activity_my_card.xml
+++ b/app/src/main/res/layout/activity_my_card.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/textbutton_color"
     android:orientation="vertical"
-    tools:context=".Activities.MyCardActivity">
+    tools:context=".Activities.AddCard">
 
     <ImageView
         android:layout_marginTop="100dp"
