--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
+    xmlns:custom="http://schemas.android.com/tools"
     android:background="@color/colorGray"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -14,11 +15,15 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="90dp"
 
+
+
+
+
             android:layout_width="200dp"
             android:layout_height="150dp" />
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
-            app:strokeColor="#D57518"
+            custom:color="#D57518"
             android:layout_width="match_parent"
             android:layout_height="48dp" />
         <View
@@ -31,7 +36,7 @@
             android:id="@+id/addBTN"
             android:text="21% OFF"
             android:textColor="@color/white"
-            android:background="#80C533"
+            android:background="#4caf1b"
             android:layout_width="70dp"
             android:layout_marginLeft="10dp"
             android:layout_height="20dp"
@@ -85,7 +90,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:background="#FF9331"
+            android:background="#eefafc"
             android:layout_marginTop="40dp"
             android:layout_height="40dp">
 
@@ -106,7 +111,7 @@
                 android:layout_gravity="center"
                 android:textSize="12dp"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/colorBlack"
+                android:textColor="#3baeb4"
                 android:textStyle="bold" />
             <ImageView
                 android:id="@+id/lockIMG"
@@ -120,7 +125,7 @@
                 android:text="Unlock Price"
                 android:id="@+id/IMG"
                android:textSize="12dp"
-                android:textColor="#d9d9d9"
+                android:textColor="#857C7C"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
