--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,26 +13,25 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/logo" />
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/locationnn"
+            android:background="@drawable/logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginRight="10dp"
-
-            >
+            android:layout_marginTop="40dp"
+            android:layout_marginRight="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:layout_marginTop="0dp"
+                android:background="@color/nav_welcolor"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
