--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:scrollbars="none"
     android:background="@color/colorGray"
     tools:context=".Activities.MainActivity">
 
@@ -55,16 +56,14 @@
                     android:text="@string/search_product" />
             </LinearLayout>
         </LinearLayout>
+
     </android.support.design.widget.AppBarLayout>
 
         <RelativeLayout
             android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
 
             <TextView
                 android:id="@+id/selling"
@@ -87,7 +86,114 @@
                 android:background="@drawable/roundbuttonss"
                 android:layout_width="80dp"
                 android:layout_height="40dp" />
+
         </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_item1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+
+        <RelativeLayout
+
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+
+                android:textColor="@color/colorPrimary"
+                android:textSize="16dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:text="@string/blockbasterl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <Button
+
+                android:id="@+id/SeeAll_BTN1"
+                android:layout_gravity="center"
+                android:text="@string/see_all"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/text_color"
+                android:background="@drawable/roundbuttonss"
+                android:layout_width="80dp"
+                android:layout_height="40dp" />
+
+        </RelativeLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_item2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+      <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+
+
+            <TextView
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:textSize="16dp"
+                android:text="Happy Grofers Customers" />-->
+
+       <!-- </LinearLayout>-->
+        <RelativeLayout
+
+            android:orientation="horizontal"
+
+
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+
+                android:textColor="@color/colorPrimary"
+                android:textSize="16dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:text="@string/saver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <Button
+
+                android:layout_gravity="center"
+                android:text="@string/see_all"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/text_color"
+                android:background="@drawable/roundbuttonss"
+                android:layout_width="80dp"
+                android:layout_height="40dp" />
+        </RelativeLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_item3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
 
 
 
