--- a/app/src/main/res/layout/recyclerbestselling_item.xml
+++ b/app/src/main/res/layout/recyclerbestselling_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:layout_margin="8dp"
         android:layout_height="wrap_content">
 
 
@@ -49,13 +49,14 @@
                             android:layout_marginTop="10dp"
 
                             android:text=" 34% OFF"
-                            android:layout_marginLeft="10dp"
+
                             android:textColor="@color/white"
                             android:background="@color/design_default_color_primary"
                             android:layout_width="60dp"
                             android:layout_height="20dp" />
 
                         <ImageView
+                            android:layout_marginLeft="20dp"
                             android:id="@+id/item_image"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
@@ -108,6 +109,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:text="Chakki Fresh Atta"
+                        android:maxLines="2"
                         android:textColor="@color/colorBlack"
                         android:textSize="14dp"
                         android:textStyle="normal" />
