--- a/app/src/main/res/layout/recyclerblockbastersale.xml
+++ b/app/src/main/res/layout/recyclerblockbastersale.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="wrap_content">
@@ -9,42 +9,10 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:orientation="horizontal"
 
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <TextView
-
-                android:textColor="@color/colorPrimary"
-                android:textSize="16dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:text="@string/blockbasterl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-
-            <Button
-
-                android:id="@+id/SeeAll_BTN1"
-                android:layout_gravity="center"
-                android:text="@string/see_all"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/text_color"
-                android:background="@drawable/roundbuttonss"
-                android:layout_width="80dp"
-                android:layout_height="40dp" />
-        </RelativeLayout>
 
 
         <LinearLayout
@@ -77,7 +45,7 @@
                         android:layout_height="wrap_content">
                         <Button
 
-                            android:id="@+id/Off_btn"
+                            android:id="@+id/moneyOff_btn1"
                             android:layout_marginTop="10dp"
 
                             android:text=" 34% OFF"
@@ -88,7 +56,7 @@
                             android:layout_height="20dp" />
 
                         <ImageView
-                            android:id="@+id/vegitable_image"
+                            android:id="@+id/vegitable_image1"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_gravity="center"
@@ -106,6 +74,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/discountmoney1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Rs259"
@@ -114,6 +83,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/totalmoney1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -122,6 +92,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/itemname1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -132,6 +103,7 @@
                         android:textStyle="normal" />
 
                     <TextView
+                        android:id="@+id/quantity1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -177,7 +149,7 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/lockIMG"
+                        android:id="@+id/lockIMG1"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="40dp"
