--- a/app/src/main/res/layout/recyclertopsaverstoday.xml
+++ b/app/src/main/res/layout/recyclertopsaverstoday.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="wrap_content">
@@ -11,40 +11,6 @@
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="wrap_content">
-
-    <RelativeLayout
-        android:orientation="horizontal"
-
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-
-            android:textColor="@color/colorPrimary"
-            android:textSize="16dp"
-            android:layout_marginTop="10dp"
-           android:gravity="center"
-            android:textStyle="bold"
-            android:text="@string/saver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <Button
-
-            android:id="@+id/SeeAll_BTN1"
-            android:layout_gravity="center"
-            android:text="@string/see_all"
-           android:layout_alignParentRight="true"
-            android:textColor="@color/text_color"
-            android:background="@drawable/roundbuttonss"
-            android:layout_width="80dp"
-            android:layout_height="40dp" />
-    </RelativeLayout>
 
 
         <LinearLayout
@@ -77,7 +43,7 @@
                         android:layout_height="wrap_content">
                         <Button
 
-                            android:id="@+id/Off_btn"
+                            android:id="@+id/moneyOff_btn2"
                             android:layout_marginTop="10dp"
 
                             android:text=" 34% OFF"
@@ -89,7 +55,7 @@
                             android:layout_height="20dp" />
 
                         <ImageView
-                            android:id="@+id/vegitable_image"
+                            android:id="@+id/vegitable_image2"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_gravity="center"
@@ -107,6 +73,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/discountmoney2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Rs259"
@@ -115,6 +82,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/totalitemmoney2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -123,6 +91,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/itemname2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -133,6 +102,7 @@
                         android:textStyle="normal" />
 
                     <TextView
+                        android:id="@+id/itemquantity2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -141,7 +111,7 @@
 
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-                        android:id="@+id/mybutton"
+                        android:id="@+id/mybutton3"
                         android:layout_width="130dp"
                         android:layout_height="30dp"
                         android:layout_centerVertical="true"
@@ -178,14 +148,14 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/lockIMG"
+                        android:id="@+id/lockIMG3"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="40dp"
                         android:background="@drawable/ic_lock"></ImageView>
 
                     <ImageView
-                        android:id="@+id/IMG"
+                        android:id="@+id/IMG3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_chevron_right"></ImageView>
